added more CSS style to get a navbar of sorts with borders and a form button and text box for the creation of new buttons, started basic javascript with global variables and a for loop

--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
         <img src="http://bestanimations.com/Earth&Space/Planets/funny-talking-planet-animation.gif" alt="spongebob gif" id="header-gif">
     </div>
 </section>
-    
+
+<div class="container">
+    <div class="row twelve columns">
+        <nav class="navbar">
+            <div class="container">
+                <ul class="navbar-list">
+                    <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
+                    <li class="navbar-item"><a class="navbar-link" href="#examples">Examples</a></li>
+                    <li class="navbar-item"><input class="navbar-item" type="text" placeholder="New Category" id="formInput"></li>
+                    <li class="navbar-item"><input class="navbar-item button-primary" type="submit" value="Create Button" id="submitButton"></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</div>
+<br><br>
 <div class="value-props row">
     <div class="eight columns value-prop">
         <div id="button-container"></div>
