fixed button looper and commented javascript

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <ul class="navbar-list">
                     <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="#examples">Examples</a></li>
+                    <li class="navbar-item"><a class="navbar-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_SpongeBob_SquarePants_characters">Character Examples</a></li>
                     <li class="navbar-item"><input class="navbar-item" type="text" placeholder="New Category" id="formInput"></li>
                     <li class="navbar-item"><input class="navbar-item button-primary" type="submit" value="Create Button" id="submitButton"></li>
                 </ul>
