added more CSS to style the buttons div

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar">
             <div class="container">
                 <ul class="navbar-list">
-                    <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
+                    <li class="navbar-item"><a class="navbar-link" target="_blank" href="https://www.youtube.com/watch?v=BqreERTLjgQ&feature=youtu.be">Intro</a></li>
                     <li class="navbar-item"><a class="navbar-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_SpongeBob_SquarePants_characters">Character Examples</a></li>
                     <li class="navbar-item"><input class="navbar-item" type="text" placeholder="New Category" id="formInput"></li>
                     <li class="navbar-item"><input class="navbar-item button-primary" type="submit" value="Create Button" id="submitButton"></li>
@@ -33,16 +33,14 @@
         </nav>
     </div>
 </div>
-<br><br>
-<div class="value-props row">
-    <div class="eight columns value-prop">
-        <div id="button-container"></div>
-    </div>
-    <div class="four columns value-prop">
-        <p>"We use the roads every day! How hard could this be?" -Guy paid to say that</p>
+<h2 id="button-label-header">Preset Buttons</h2>
+<div class="container">
+    <div class="row six columns">
+        <div class="value-props row">
+            <div id="button-container"></div>
+        </div>
     </div>
 </div>
-
 
 <!-- jQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
