added the AJAX call for the gif buttons and the new div in HTML to place the new gifs in

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         </div>
     </div>
 </div>
+<h2 id="button-label-header">Gifs!</h2>
+<div class="container">
+    <div class="row six columns">
+        <div class="value-props row">
+            <div id="gif-container"></div>
+        </div>
+    </div>
+</div>
 
 <!-- jQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
