wrote media queries for the resizing of the gif in the header considering it was placed on the page as a fixed element and did not live inside any particular div... page looks HOTgit add -A

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <li class="navbar-item"><a class="navbar-link" target="_blank" href="https://www.youtube.com/watch?v=BqreERTLjgQ&feature=youtu.be">Intro</a></li>
                     <li class="navbar-item"><a class="navbar-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_SpongeBob_SquarePants_characters">Character Examples</a></li>
                     <li class="navbar-item"><input class="navbar-item" type="text" placeholder="New Category" id="formInput"></li>
-                    <li class="navbar-item"><input class="navbar-item button-primary" type="submit" value="Create Button" id="submitButton"></li>
+                    <li class="navbar-item"><input class="navbar-item" type="submit" value="Create Button" id="submitButton"></li>
                 </ul>
             </div>
         </nav>
     </div>
 </div>
-<h2 id="button-label-header">Preset Buttons</h2>
+<h2 id="button-label-header">Spongebob Characters:</h2>
 <div class="container">
     <div class="row six columns">
         <div class="value-props row">
@@ -41,7 +41,7 @@
         </div>
     </div>
 </div>
-<h2 id="button-label-header">Gifs!</h2>
+<h2 id="button-label-header">Gifs:</h2>
 <div class="container">
     <div class="row six columns">
         <div class="value-props row">
@@ -49,7 +49,7 @@
         </div>
     </div>
 </div>
-
+<br><br>
 <!-- jQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!-- Script -->
